<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/llAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:padding="@dimen/space_s"
        >
        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/ic_messages_at"
            />
        <TextView
            style="@style/tv_m_black_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/at_me"
            android:padding="@dimen/space_m"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow_right"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:padding="@dimen/space_s"
        >
        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/ic_messages_comments"
            />
        <TextView
            style="@style/tv_m_black_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/lbl_comment"
            android:padding="@dimen/space_m"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow_right"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:padding="@dimen/space_s"
        >
        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/ic_messages_at"
            />
        <TextView
            style="@style/tv_m_black_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/lbl_like"
            android:padding="@dimen/space_m"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow_right"
            />
    </LinearLayout>
</LinearLayout>